cargo-features = ["strip"]

[package]
name = "vmstat-monitor"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = "z"
lto = true
strip = "symbols"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { git="https://github.com/tomboland/nix", branch="feature/add-renameat2" }
